--- a/src/components/collection/collection.styles.scss
+++ b/src/components/collection/collection.styles.scss
@@ -1,18 +1,25 @@
 .collection-page {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  @media screen and (max-width: 800px) {
+    align-items: center;
+  }
 
-    .title {
-        font-size: 38px;
-        margin: 0 auto 30px;
+  .title {
+    font-size: 38px;
+    margin: 0 auto 30px;
+  }
+  .items {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 10px;
+    @media screen and (max-width: 800px) {
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 15px;
     }
-    .items {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-gap: 10px;
 
     & .collection-item {
-        margin-bottom: 30px;
+      margin-bottom: 30px;
     }
-    }
+  }
 }
