--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -57,9 +57,16 @@
     justify-content: space-between;
     font-size: 18px;
 
+    @media screen and (max-width: 800px) {
+      width: 90%;
+    }
+
     .name {
       width: 90%;
       margin-bottom: 15px;
+      @media screen and (max-width: 800px) {
+        width: 80%;
+      }
     }
 
     .price {
