--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -5,6 +5,7 @@
   height: 350px;
   align-items: center;
   position: relative;
+  
 
   @media screen and (max-width: 800px) {
     width: 40vw;
@@ -54,7 +55,7 @@
     width: 100%;
     height: 5%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     font-size: 18px;
 
     @media screen and (max-width: 800px) {
@@ -62,15 +63,14 @@
     }
 
     .name {
-      width: 90%;
+      width: 70%;
       margin-bottom: 15px;
       @media screen and (max-width: 800px) {
         width: 80%;
       }
     }
-
     .price {
-      width: 10%;
+      
     }
   }
 }
